Work on jpackage w/ runtime build tasks